--- a/neural_net_dist/build.gradle
+++ b/neural_net_dist/build.gradle
@@ -6,9 +6,9 @@ repositories {
 //create a single Jar with all dependencies
 task fatJar(type: Jar) {
     manifest {
-        attributes 'Implementation-Title': 'Neural Network Giraph',
+        attributes 'Implementation-Title': 'Sequential Distributed Network',
                 'Implementation-Version': 1.0,
-                'Main-Class': 'neural_net.BackwardPropagation'
+                'Main-Class': 'distributed_net.DistributedNeuralNetwork'
     }
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
@@ -21,8 +21,8 @@ dependencies {
     compile group: 'org.apache.giraph', name: 'giraph-core', version: '1.1.0'
     // https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-core
     compile group: 'org.apache.hadoop', name: 'hadoop-core', version: '1.2.1'
-    // https://mvnrepository.com/artifact/junit/junit
-    compile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.0'
+    // https://mvnrepository.com/artifact/redis.clients/jedis
+    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
 }
