--- a/neural_net_dist/build.gradle
+++ b/neural_net_dist/build.gradle
@@ -8,7 +8,7 @@ task fatJar(type: Jar) {
     manifest {
         attributes 'Implementation-Title': 'Sequential Distributed Network',
                 'Implementation-Version': 1.0,
-                'Main-Class': 'distributed_net.DistributedNeuralNetwork'
+                'Main-Class': 'distributed_net.DistNeuralNet'
     }
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
